# pygerrit2

./: .gitignore  .mailmap  .project  .pydevproject  .pylintrc  .travis.yml  AUTHORS.rst  HISTORY.rst  Makefile  Pipfile  README.md  README.rst  description.rst  doc_requirements.txt  example.py  gerrit_stream.py  livetests.py  requirements.txt  rest_example.py  setup.cfg  setup.py  test_requirements.txt  tox.ini  unittests.py  version.py
.github/: dependabot.yml
docs/: Makefile  conf.py  index.rst  make.bat
pygerrit/: __init__.py  client.py  error.py  events.py  models.py  rest.py  ssh.py  stream.py
pygerrit/rest/: __init__.py  auth.py
pygerrit2/: __init__.py
pygerrit2/rest/: __init__.py  auth.py
testdata/: change-merged-event.txt  invalid-json.txt  merge-failed-event.txt  reviewer-added-event.txt  topic-changed-event.txt  unhandled-event.txt
tests/: Makefile  test_category.sh
tests/gerrit_events/unittest_event_factory/: README  unittests.py
tests/gerrit_events/unittest_gerrit_stream_events/: change-abandoned-event.txt  change-restored-event.txt  patchset-created-event.txt  unittests.py  user-defined-event.txt
tests/gerrit_stream/unittest_gerrit_stream/: README  unittests.py
tests/gerrit_stream/unittest_gerrit_stream_attach_detach/: README  unittests.py
tests/gerrit_stream/unittest_gerrit_stream_events/: README  change-abandoned-event.txt  change-merged-event.txt  change-restored-event.txt  command  comment-added-event.txt  draft-published-event.txt  patchset-created-event.txt  ref-updated-event.txt  unittests.py
