[metadata]
name = pygerrit
summary = Client library for interacting with Gerrit
author = David Pursehouse
author_email = david.pursehouse@sonymobile.com
home-page = https://github.com/sonyxperiadev/pygerrit
license = The MIT License
keywords =
    gerrit
    rest
    http
    json
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
